# pyqt-helloworld

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: test.yaml
pyqt_helloworld/: helloworld_window.py  pyqt_helloworld.py
