[tool.poetry]
name = "pyqt-helloworld"
version = "0.1.0"
description = "test cross-platform ci/cd on pyqt project"
authors = ["giuncan <andrea.giunchi.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
PyQt6 = "^6.6.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
